--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "lochmueller/static-info-tables-zh",
+  "name": "kaesetoast/static-info-tables-zh",
   "type": "typo3-cms-extension",
   "version": "6.2.6",
   "description": "Chinese (zh) language pack for the Static Info Tables providing localized names for countries, currencies and so on. Dev on: https://github.com/lochmueller/static_info_tables_zh",
@@ -18,6 +18,10 @@
     {
       "type": "composer",
       "url": "https://composer.typo3.org"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/kaesetoast/static_info_tables_zh"
     }
   ],
   "keywords": [
